Fix links-container gap on page view on screens < 500px

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -73,7 +73,7 @@ body {
   scrollbar-gutter: stable;
 
   // to scale down on screens below 360px
-  min-width: 36rem;
+  min-width: 40rem;
 }
 
 .container {
