--- a/src/sass/_page.scss
+++ b/src/sass/_page.scss
@@ -68,6 +68,10 @@
     justify-content: center;
     gap: 4.8rem;
 
+    @media only screen and (max-width: $bp-small) {
+      gap: 2.4rem;
+    }
+
     .link--btn {
       &:link,
       &:visited {
